--- a/KooliProjekt/Views/Shared/_Header.cshtml
+++ b/KooliProjekt/Views/Shared/_Header.cshtml
@@ -13,6 +13,15 @@
                 <li>
                     <a asp-controller="Home" asp-action="Index">Home</a>
                 </li>
+                <!--Lisatud 08,11 t2 j2rgi 1:05 -->
+                <li>
+                    <a asp-controller="RealEstates" asp-action="Index">Real Estates</a>
+                    <!--Kui panna RealEstatesController, siis ei leia + URLis on see controller. Panna RealEstates siis t;;tab-->
+                </li>
+                <li>
+                    <a asp-controller="Transactions" asp-action="Index">Transactions</a>
+                </li>
+                <!--Lisatud 08,11 t2 j2rgi 1:05 -->
                 <li>
                     <a asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
