--- a/KooliProjekt/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/KooliProjekt/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,3 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<!--v2ljakommenteeritud et pinkt, koma errorist vabaneda, 09.11. t2 vastavalr 1:21
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>-->
