Lisasin UserFundsStatusViewModeli, selle servicei ja selle interfacei. Idee on selles et see on nagu rahakotivaade, mida saab toppida igast muudesse vaadetesse.

--- a/KooliProjekt/Views/UserFundsTransactions/Index.cshtml
+++ b/KooliProjekt/Views/UserFundsTransactions/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@*model IEnumerable<KooliProjekt.Data.UserFundsTransaction>*@
 @model KooliProjekt.Data.PagedResult<KooliProjekt.Data.UserFundsTransaction>
-
+@model KooliProjekt.Models.UserFundsStatusViewModel
 @{
     ViewData["Title"] = "Index";
 }
