--- a/KooliProjekt/Views/UserFundsTransactions/Deposit.cshtml
+++ b/KooliProjekt/Views/UserFundsTransactions/Deposit.cshtml
@@ -27,3 +27,6 @@
         <input type="submit" value="Deposit" class="btn btn-primary" />
     </div>
 </form>
+<div>
+    @await Component.InvokeAsync("UserFundsStatus")
+</div>
