--- a/KooliProjekt/Views/UserFundsTransactions/Withdraw.cshtml
+++ b/KooliProjekt/Views/UserFundsTransactions/Withdraw.cshtml
@@ -27,3 +27,6 @@
         <input type="submit" value="Withdraw" class="btn btn-primary" />
     </div>
 </form>
+<div>
+    @await Component.InvokeAsync("UserFundsStatus")
+</div>
