--- a/KooliProjekt/Views/Shared/Components/PurchaseRealEstate/Default.cshtml
+++ b/KooliProjekt/Views/Shared/Components/PurchaseRealEstate/Default.cshtml
@@ -9,23 +9,20 @@
     </div>
     <div class="form-group">
         <label asp-for="RealEstateCountry">Country:</label>
-        <input asp-for="RealEstateName" class="form-control" />
+        <input asp-for="RealEstateCountry" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="RealEstateCity">City:</label>
-        <input asp-for="RealEstateName" class="form-control" />
+        <input asp-for="RealEstateCity" class="form-control" />
     </div>
         <div class="form-group">
         <label asp-for="RealEstateAddress">Address:</label>
-        <input asp-for="RealEstateName" class="form-control" />
+        <input asp-for="RealEstateAddress" class="form-control" />
     </div>
-    <div class="form-group">
-        <label asp-for="RealEstateName">Name:</label>
-        <input asp-for="RealEstateName" class="form-control" />
-    </div>
+
     <div class="form-group">
         <label asp-for="PurchasePrice">PurchasePrice:</label>
-        <input asp-for="RealEstateName" class="form-control" />
+        <input asp-for="PurchasePrice" class="form-control" />
     </div>
 
     
