jaman Real Estate sell meetodiga 1

--- a/KooliProjekt/Views/Transactions/Index.cshtml
+++ b/KooliProjekt/Views/Transactions/Index.cshtml
@@ -62,7 +62,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.AssetId)
             </td>
-            <td>@Html.DisplayFor(modelItem => item.AssetName)</td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AssetName)
+            </td>
             
             <td>
                 @Html.DisplayFor(modelItem => item.Action)
