--- a/KooliProjekt/Views/Shared/_Header.cshtml
+++ b/KooliProjekt/Views/Shared/_Header.cshtml
@@ -16,10 +16,14 @@
                 <!--Lisatud 08,11 t2 j2rgi 1:05 -->
                 <li>
                     <a asp-controller="RealEstates" asp-action="Index">Real Estates</a>
-                    <!--Kui panna RealEstatesController, siis ei leia + URLis on see controller. Panna RealEstates siis t;;tab-->
+                    <!--Kui panna RealEstatesController, siis ei leia + URLis on see controller.
+                    Panna RealEstates siis t;;tab-->
                 </li>
                 <li>
                     <a asp-controller="Transactions" asp-action="Index">Transactions</a>
+                </li>
+                <li>
+                    <a asp-controller="UserFundsTransactions" asp-action="Index">Wallet</a>
                 </li>
                 <!--Lisatud 08,11 t2 j2rgi 1:05 -->
                 <li>
